[package]
name = "gs-secure-validate"
version = "1.0.0"
authors = ["FaultyRAM <316014+FaultyRAM@users.noreply.github.com>"]
edition = "2018"
description = "Generates responses to a GameSpy protocol secure/validate challenge."
repository = "https://github.com/FaultyRAM/gs-secure-validate"
license = "Apache-2.0 OR MIT"
keywords = ["GameSpy", "protocol", "query", "response", "challenge"]
categories = ["algorithms", "no-std"]

[features]
default = []
std = []
